feat(nav): Adding nav element.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<nav>
+    <ul>
+        <li>
+        <a routerLink="/home/cart" routerLinkActive="active">Cart</a>
+        <a routerLink="/home/products" routerLinkActive="active">Products</a>
+        </li>
+    </ul>
+</nav>
 <router-outlet></router-outlet>
