feat(product-details): Change product detail route config.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,9 +3,9 @@
 		<img src="https://dummyimage.com/720x400" alt="" class="">
 		<div class="">
 			<h2 class="">CATEGORY</h2>
-			<a [routerLink]="['/home/product-details']"
-				[queryParams]="{ id: 999, color: 'red'}" class="">
-			PRODUCT TITLE</a>
+			<a [routerLink]="['/home/product-details',999]" class="">
+				PRODUCT TITLE
+			</a>
 			<p class="">Photo booth fam kinfolk cold-pressed tousled waistcoat.</p>
 			<div class=""></div>
 			<a class="">Learn More</a>
