--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,39 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
-/* You can add global styles to this file, and also import other style files */
-* {
-    box-sizing: border-box;
+::view-transition-old(root) {
+    animation: exit 2s ease 0s 1 normal forwards;
 }
 
-body {
-    margin: 0;
-    padding: 0;
+::view-transition-new(root) {
+    animation: enter 3s ease 0s 1 normal forwards;
 }
-img {
-    width: 100%;
-}
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 5px;
-}
-.column {
-    flex: 30%;
-    padding: 5px;
-    margin: 5px;
-    min-width: 250px;
-    img {
-        height: 30vh;
-        object-fit: cover;
+
+@keyframes enter {
+    from {
+        opacity: 0;
+        transform: translateY(-50px);
     }
-    // }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
-
-// article {
-//     padding: 16px;
-//     border-radius: 5px;
-//     border: 2px solid #0000;
-//     background: 
-//         linear-gradient(black, #222) padding-box,
-//         linear-gradient(#09f, white) border-box;
-// }
+@keyframes exit {
+    from {
+        opacity: 1;
+        transform: scale(1);
+    }
+    to {
+        opacity: 0;
+        transform: scale(0.6);
+    }
+}
