fix(products): improving products view.

--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -1,6 +1,23 @@
 <p>products works!</p>
-@if(products$ | async; as products){
-    @for (product of products; track product.id) {
-        <app-card [product]="product"></app-card>
-    }
-}
+<section class="text-gray-600 body-font">
+    <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-wrap m-4">
+            @if(products$ | async; as products){
+                @for (product of products; track $index) {
+                    <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
+                        <a href="" class="block relative h-48 rounded overflow-hidden">
+                            <img src="{{ product.image }}" alt="{{ product.title }}" class="object-cover object-center w-full h-full block">
+                        </a>
+                        <div class="mt-4">
+                            <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">{{ product.category }}</h3>
+                            <h2 class="text-gray-900 title-font text-lg font-medium">{{ product.title }}</h2>
+                            <p class="mt-1">{{ product.price }}</p>
+                            <!-- <p class="mt-1">{{ product.price | currency }}</p> -->
+                        </div>
+                    </div>
+                    <!-- <app-card [product]="product"></app-card> -->
+                }
+            }
+        </div>
+    </div>
+</section>
